fix error, overflow in chat

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -28,6 +28,16 @@
  /*CHAT MESSAGES*/
 .chat__messages{
     flex:1;
+    overflow: scroll;
+}
+
+.chat__messages::-webkit-scrollbar{
+    display: none;
+}
+ /* Hide scrollbar for IE,Edge and firefox */
+ .chat__messages::-webkit-scrollbar{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 
